@@ -5,6 +5,7 @@ import org.skypro.skyshop.model.search.Searchable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class SearchService {
@@ -15,11 +16,12 @@ public class SearchService {
         this.storageService = storageService;
     }
 
-    public List<Searchable> search(String query) {
+    public List<SearchResult> search(String query) {
         String queryLower = query.toLowerCase();
         return storageService.getAll().stream()
                 .filter(item -> item.getStringRepresentation().toLowerCase().contains(queryLower))
-                .toList();
+                .map(SearchResult::fromSearchable)
+                .collect(Collectors.toList());
     }
 
 
